{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 2130,
  "lineage": "8d868691-c3f1-5377-aeab-fd650fcc76bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:211475862740:loadbalancer/app/myapp-load-balancer/d8ff784099cecce6",
            "arn_suffix": "app/myapp-load-balancer/d8ff784099cecce6",
            "dns_name": "myapp-load-balancer-1513975815.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211475862740:loadbalancer/app/myapp-load-balancer/d8ff784099cecce6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-load-balancer",
            "security_groups": [
              "sg-09c5e40f677f1a5c6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-038c940d0c01788eb"
              },
              {
                "subnet_id": "subnet-06e2cb2a62263e036"
              },
              {
                "subnet_id": "subnet-093c2d072a864efae"
              }
            ],
            "subnets": [
              "subnet-038c940d0c01788eb",
              "subnet-06e2cb2a62263e036",
              "subnet-093c2d072a864efae"
            ],
            "vpc_id": "vpc-0ba2f8a502f8b8202",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.vpc_securitygroup",
            "aws_subnet.ECS_vpc_subnet",
            "aws_vpc.ECS_vpc",
            "data.aws_availability_zones.avl_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:211475862740:listener/app/myapp-load-balancer/d8ff784099cecce6/56d077303f578a30",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:211475862740:targetgroup/myapp-target-group/d63b79e8ffac38be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211475862740:listener/app/myapp-load-balancer/d8ff784099cecce6/56d077303f578a30",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:211475862740:loadbalancer/app/myapp-load-balancer/d8ff784099cecce6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.vpc_securitygroup",
            "aws_subnet.ECS_vpc_subnet",
            "aws_vpc.ECS_vpc",
            "data.aws_availability_zones.avl_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:211475862740:targetgroup/myapp-target-group/d63b79e8ffac38be",
            "arn_suffix": "targetgroup/myapp-target-group/d63b79e8ffac38be",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/home",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:211475862740:targetgroup/myapp-target-group/d63b79e8ffac38be",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "myapp-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ba2f8a502f8b8202"
          },
          "dependencies": [
            "aws_vpc.ECS_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211475862740:internet-gateway/igw-058de980c7c077061",
            "id": "igw-058de980c7c077061",
            "owner_id": "211475862740",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ba2f8a502f8b8202"
          },
          "dependencies": [
            "aws_vpc.ECS_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c09cc1208606b921",
            "owner_id": "211475862740",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058de980c7c077061",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ECS_vpc_route"
            },
            "vpc_id": "vpc-0ba2f8a502f8b8202"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.ECS_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c675d1d6c7605a88",
            "route_table_id": "rtb-0c09cc1208606b921",
            "subnet_id": "subnet-06e2cb2a62263e036"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.vpc_route",
            "aws_subnet.ECS_vpc_subnet",
            "aws_vpc.ECS_vpc",
            "data.aws_availability_zones.avl_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a563e71bba043d96",
            "route_table_id": "rtb-0c09cc1208606b921",
            "subnet_id": "subnet-038c940d0c01788eb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.vpc_route",
            "aws_subnet.ECS_vpc_subnet",
            "aws_vpc.ECS_vpc",
            "data.aws_availability_zones.avl_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091214db71375e887",
            "route_table_id": "rtb-0c09cc1208606b921",
            "subnet_id": "subnet-093c2d072a864efae"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.vpc_route",
            "aws_subnet.ECS_vpc_subnet",
            "aws_vpc.ECS_vpc",
            "data.aws_availability_zones.avl_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211475862740:security-group/sg-09c5e40f677f1a5c6",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c5e40f677f1a5c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "traffic",
            "name_prefix": "",
            "owner_id": "211475862740",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0ba2f8a502f8b8202"
          },
          "dependencies": [
            "aws_vpc.ECS_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ECS_vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211475862740:subnet/subnet-06e2cb2a62263e036",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.20.0.0/24",
            "id": "subnet-06e2cb2a62263e036",
            "map_public_ip_on_launch": true,
            "owner_id": "211475862740",
            "tags": {
              "Name": "public_subnet-count.index"
            },
            "vpc_id": "vpc-0ba2f8a502f8b8202"
          },
          "dependencies": [
            "aws_vpc.ECS_vpc",
            "data.aws_availability_zones.avl_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211475862740:subnet/subnet-038c940d0c01788eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.20.1.0/24",
            "id": "subnet-038c940d0c01788eb",
            "map_public_ip_on_launch": true,
            "owner_id": "211475862740",
            "tags": {
              "Name": "public_subnet-count.index"
            },
            "vpc_id": "vpc-0ba2f8a502f8b8202"
          },
          "dependencies": [
            "aws_vpc.ECS_vpc",
            "data.aws_availability_zones.avl_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211475862740:subnet/subnet-093c2d072a864efae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.20.2.0/24",
            "id": "subnet-093c2d072a864efae",
            "map_public_ip_on_launch": true,
            "owner_id": "211475862740",
            "tags": {
              "Name": "public_subnet-count.index"
            },
            "vpc_id": "vpc-0ba2f8a502f8b8202"
          },
          "dependencies": [
            "aws_vpc.ECS_vpc",
            "data.aws_availability_zones.avl_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ECS_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:211475862740:vpc/vpc-0ba2f8a502f8b8202",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0650b0a88fea3161e",
            "default_route_table_id": "rtb-0b502e84414c152dc",
            "default_security_group_id": "sg-05081c00cb634e099",
            "dhcp_options_id": "dopt-b98b7dd2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ba2f8a502f8b8202",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b502e84414c152dc",
            "owner_id": "211475862740",
            "tags": {
              "Environment": "default"
            }
          }
        }
      ]
    }
  ]
}